--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
 0.06      2014-09-28 14:05:50+03:00 Europe/Minsk
+        Support textures loading for Observer, use GLSL for that.
 
 0.05      2014-09-06 12:49:47+03:00 Europe/Minsk
         Added aberrations and angular speed analisys
